tests/samples/negative/visibility/private_enum_import.ax
module private_enum_import;

import samplelib.visibility;

fn main() -> i32 {
    let choice = HiddenChoice_yes;
    return 0;
}
